--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
 <h3>It’s believed that some wizards, enchantresses and sorcerers encode spells in MIDI.</h3>
 
 <p>An incantation is <em>typically</em> a spoken spell, but a MIDI is a kind of like an audio spell without words. Spontaneous paranormal phenomena have been known to manifest when listening to, and otherwise around, these strange little sound files…</p>
-
+<img src="/image/sorcerer.png" class="sorcerer">
 <h3>MIDI are extremely versatile.</h3>
 
 <p>MIDI uses the <em>same protocol</em> to command lighting rigs, fog machines, and even some fountain displays. Each special effects event functions almost like a musical <em>note</em> of sorts. These particular MIDI have become a part of theme park live displays and similar environments.</p>
