--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 
 <p>Rather than transmitting actual audio, MIDI sends <em>instructions.</em> These include which note to play, how loud, for how long, and with what kind of expression. This makes MIDI massively flexible, enabling one small file to control entire <em>orchestras</em> of virtual instruments without storing <em>any</em> sound data itself.</p>
 
-<p>MIDI created a language that was crystalline and beautiful. It allowed keyboards, synthesizers, and digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth. For reasons I don’t quite understand, MIDI was also used to trigger lighting effects for theme park displays! Strange, but true!</p>
+<p>MIDI created a language that was crystalline and beautiful. It allowed keyboards, synthesizers, and digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth.</p>
 
 <p>Today, MIDI is <em>still</em> a core part of modern music technology, even if they’ve fallen out of favor on the World Wide Web. MIDI is a precise, language-like system for telling machines <em>how</em> to think about music, not <em>what</em> the music sounds like. If audio is a recording of a singer’s voice, MIDI is the sheet music they’re reading from. Any instrument can interpret it, in infinite ways. </p>
 
