--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
      <a href="#legends">Legends</a>
     </li>
     <li>
-     <a href="#">Vaults</a>
+     <a href="#vaults">Vaults</a>
     </li>
         <li>
      <a href="#links">Links</a>
