--- a/public/index.html
+++ b/public/index.html
@@ -192,6 +192,17 @@
 </ul>
 
 
+<h2 id="updates">Site Updates Log</h2>
+<p>This site was conceived as a concept on midsummer of 2025 and created soon after. It is a <em>single-page site</em> at present. I will try to update it regularly as I paw through the pile of MIDI files I’ve collected, and as I collect and curate even more. Thanks for visiting!</p>
+
+<ul id="changes">
+	<li>July 7th, 2025. Addition of popular music MIDI vault as well as one just focused on the Beatles.</li>
+	<li>July 4th, 2025. Addition of first MIDI files, the classics such as Santorini, Canyon and others.</li>
+	<li>July 3rd, 2025. Site first publicly uploaded to Neocities. Officially declared open?</li>
+	<li>June 21st, 2025. Site concept first conceived after a while of collecting MIDI with plans to collect even more.</li>
+</ul>
+
+
 
 
 </article>
