--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
         <li>
      <a href="#links">Links</a>
     </li>
+            <li>
+     <a href="#updates">Updates</a>
+    </li>
   </ul>
 </nav>
 
