--- a/public/index.html
+++ b/public/index.html
@@ -200,6 +200,7 @@
 
 <ul id="changes">
 	<li>July 7th, 2025. Addition of popular music MIDI vault as well as one just focused on the Beatles.</li>
+  <li>July 5th, 2025. Purchased several lovely sets of commercially-licensed pixel clipart on etsy to illustrate.</li>
 	<li>July 4th, 2025. Addition of first MIDI files, the classics such as Santorini, Canyon and others.</li>
 	<li>July 3rd, 2025. Site first publicly uploaded to Neocities. Officially declared open?</li>
 	<li>June 21st, 2025. Site concept first conceived after a while of collecting MIDI with plans to collect even more.</li>
