--- a/public/index.html
+++ b/public/index.html
@@ -199,11 +199,11 @@
 <p>This site was conceived as a concept on midsummer of 2025 and created soon after. It is a <em>single-page site</em> at present. I will try to update it regularly as I paw through the pile of MIDI files I’ve collected, and as I collect and curate even more. Thanks for visiting!</p>
 
 <ul id="changes">
-	<li>July 7th, 2025. Addition of popular music MIDI vault as well as one just focused on the Beatles.</li>
-  <li>July 5th, 2025. Purchased several lovely sets of commercially-licensed pixel clipart on etsy to illustrate.</li>
-	<li>July 4th, 2025. Addition of first MIDI files, the classics such as Santorini, Canyon and others.</li>
-	<li>July 3rd, 2025. Site first publicly uploaded to Neocities. Officially declared open?</li>
-	<li>June 21st, 2025. Site concept first conceived after a while of collecting MIDI with plans to collect even more.</li>
+	<li><span>July 7th, 2025.</span> Addition of popular music MIDI vault as well as one just focused on the Beatles.</li>
+  <li><span>July 5th, 2025.</span> Purchased several lovely sets of commercially-licensed pixel clipart on etsy to illustrate.</li>
+	<li><span>July 4th, 2025.</span> Addition of first MIDI files, the classics such as Santorini, Canyon and others.</li>
+	<li><span>July 3rd, 2025.</span> Site first publicly uploaded to Neocities. Officially declared open?</li>
+	<li><span>June 21st, 2025.</span> Site concept first conceived after a while of collecting MIDI with plans to collect even more.</li>
 </ul>
 
 
