--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
 
 
-  <h1>Well Met in Midsummer</h1>
+  <h1>Merry Met in Midsummer</h1>
 <img src="image/lantern.png" class="lantern"><img src="image/mage.png" class="mage"><h3>Grab the lantern!</h3><p>Enter the mystic, shady forest of MIDI, overgrown with luminous and lush digitally-produced sounds. These wondrous little musical files adorned the independent websites of the 1990s and 2000s. They were like spells cast of pure sound on the Web of yore…. Typing the shiny, <em>secretive</em> and shrinking HTML tag <em>&lt;bgsound src=“url.mid”&gt;</em> would, <a href="https://midis.fandom.com/wiki/Bgsound_(Website_BGM)">in earlier browsers</a>, play a MIDI file in the background of a webpage directly. Even as Napster and MP3s gained speed, sites still existed for trading MIDI files, and I remember seeing them well into the 2000s.</p>
 
 <p>Now? You rarely see anything about them <em>anywhere</em> unless you go on some sort of valiant quest for them directly (which you may well have done, having reached <em>this</em> particular site). Things have, after all, changed quite a bit. In fact, many sites <em>disallow</em> sharing MIDI, and some browsers now find it difficult to play them. I’m not quite sure why this happened, being fuzzy on the particularities but heavily nostalgic about the MIDI files themselves. </p>
