--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
 	<li><a href="https://verymintywebsite.neocities.org/midifileswoo">A Very Minty Website</a></li>
 </ul>
 <h2 id="chat">Connect</h2>
-<img src="/image/sacred.png" class="sacred"><iframe src="https://www5.cbox.ws/box/?boxid=957677&boxtag=PJI0v8" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
+<img src="/image/sacred.png" class="sacred"><iframe src="https://www5.cbox.ws/box/?boxid=957677&boxtag=PJI0v8" width="max-content" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
 
 <h2 id="updates">Site Updates Log</h2>
 <p>This site was conceived as a concept on midsummer of 2025 and created soon after. It is a <em>single-page site</em> at present. I will try to update it regularly as I paw through the pile of MIDI files I’ve collected, and as I collect and curate even more. Thanks for visiting!</p>
