--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
 
 <P>Please use the cbox below if you would like to publicly connect with this site or otherwise make contact with the hedge in some way. Alternatively, you can <a href="https://neocities.org/site/midiforest">connect via my neocities page</a>. I am also available via email as <em>clarity - at - fabled - dot - day</em>. You can catch me on Discord as <em>clarityanne</em>.</P>
 
-<iframe src="https://www5.cbox.ws/box/?boxid=957677&boxtag=PJI0v8" width="max-content" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
+<iframe src="https://www5.cbox.ws/box/?boxid=957677&boxtag=PJI0v8" width="100%" height="450" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>	
 
 <h2 id="updates">Site Updates Log</h2>
 <p>This site was conceived as a concept on midsummer of 2025 and created soon after. It is a <em>single-page site</em> at present. I will try to update it regularly as I paw through the pile of MIDI files I’ve collected, and as I collect and curate even more. Thanks for visiting!</p>
